--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#75C1BA" />
+  <meta name="description" content="개인 포트폴리오 홈페이지입니다." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
